<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:src="@drawable/galaxyware"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Entre em contato:"
            android:textAllCaps="true"
            android:paddingStart="16dp"
            android:paddingTop="20sp"
            style="@style/textDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:padding="5dp"
                android:layout_marginStart="16dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/icon_astronaut64"
                     />

                <TextView
                    style="@style/textItem"
                    android:text="@string/cellphone"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:padding="10dp"
                android:layout_marginStart="16dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/icon_satellite"
                    />

                <TextView
                    style="@style/textItem"
                    android:text="@string/email"
                    android:autoLink="email"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:padding="10dp"
                android:layout_marginStart="16dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/icon_planet64"
                     />

                <TextView
                    style="@style/textItem"
                    android:text="@string/web"
                    android:autoLink="web"/>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1e2c4a">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                style="@style/textDescription"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textAllCaps="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                style="@style/textDescription"
                android:layout_marginStart="16dp"
                android:textAlignment="viewStart"/>
        </LinearLayout>


</LinearLayout>